# ci-image-builder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  OLD_README.md  README.md  build.sh  builder-post.sh  buildspec.yml  cli  entrypoint.sh  install-dependencies-for-all-pythons.sh  pyproject.toml  release-config.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: on_push.yml  paketo.yml  pull-request-checks.yml
image_builder/: commands.py  const.py  docker.py  notify.py  pack.py  progress.py  publish.py
image_builder/codebase/: codebase.py  load_run_environment.sh  processes.py  revision.py
image_builder/codebase/language/: __init__.py  base.py  end_of_life.py  nodejs.py  php.py  python.py  ruby.py
image_builder/commands/: build.py  deploy.py
image_builder/configuration/: builder.py  builder_configuration.yml  codebase.py
image_builder/utils/: arn_parser.py
test/: base_test_case.py
test/doubles/: codebase.py  end_of_life.py  fake_pack.sh  fake_pack_fail.sh  process.py
test/fixtures/builder/: config.yml
test/helpers/: files.py
test/image_builder/: test_commands.py  test_docker.py  test_notify.py  test_pack.py  test_publish.py
test/image_builder/codebase/: test_codebase.py  test_processes.py  test_revision.py
test/image_builder/commands/: test_build.py  test_deploy.py
test/image_builder/configuration/: test_builder_configuration.py  test_codebase_configuration.py  test_supported_build_configuration.py
test/image_builder/utils/: test_arn_parser.py
(+11 files in other folders)
