[tool.poetry]
name = "ci-image-builder"
version = "1.6.0"
description = "Build Application Images in a pipeline"
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"
packages = [{include = "ci_image_builder"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYaml = "^6.0.1"
requests = "^2.32.2"
click = "^8.1.7"
slack-sdk = "^3.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
parameterized = "^0.9.0"
pyfakefs = "^5.7.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
