[tool.poetry]
name = "ci-image-builder"
version = "1.7.1"
description = "Build Application Images in a pipeline"
authors = ["Department for Business and Trade Platform Team <sre-team@digital.trade.gov.uk>"]
readme = "README.md"
packages = [{include = "image_builder"}]

[tool.poetry.dependencies]
python = "^3.11"
PyYaml = "^6.0.1"
requests = "^2.32.3"
click = "^8.1.8"
slack-sdk = "^3.35.0"
boto3 = "^1.37.37"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
parameterized = "^0.9.0"
pyfakefs = "^5.8.0"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
